[tool.poetry]
name = "bricks"
version = "0.1.0"
description = "a simple brick breaker game made with PyGame"
authors = ["Sayhan Rahman <sayhanrahman@gokkusagi.k12.tr>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pygame = "^2.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
